Bug 95347 - memory leak in pa_resampler_ffmpeg_init()
Summary: memory leak in pa_resampler_ffmpeg_init()
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-11 03:37 UTC by Sachin Kumar Chauhan
Modified: 2016-05-13 09:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Sachin Kumar Chauhan 2016-05-11 03:37:15 UTC
There seems a memory leak in pa_resampler_ffmpeg_init() in src/pulsecore/resampler/ffmpeg.c

--------------------
    ffmpeg_data = pa_xnew(struct ffmpeg_data, 1);
    if (!(ffmpeg_data->state = av_resample_init((int) r->o_ss.rate, (int) r->i_ss.rate, 16, 10, 0, 0.8)))
        return -1;
------------------

the ffmpeg_data should be freed before return.
Comment 1 Sachin Kumar Chauhan 2016-05-13 08:48:06 UTC
Patch has been sent to https://bugs.freedesktop.org/show_bug.cgi?id=95347
Comment 2 Arun Raghavan 2016-05-13 08:51:00 UTC
Please don't file a bug /and/ send in a patch. This just increases the overhead with no value.
Comment 3 Sachin Kumar Chauhan 2016-05-13 09:29:49 UTC
You mean that I should directly send patch without filing a bug.

Please clarify my doubt once -
1) What is the desired way to send fixes ?
2) What is the desired way to ask for your opinion for fixing possible issues, like my other bug - https://bugs.freedesktop.org/show_bug.cgi?id=95348
Comment 4 Arun Raghavan 2016-05-13 09:56:04 UTC
(In reply to Sachin Kumar Chauhan from comment #3)
> You mean that I should directly send patch without filing a bug.
> 
> Please clarify my doubt once -
> 1) What is the desired way to send fixes ?

Commit the patch locally and send to the mailing list using git send-email.

> 2) What is the desired way to ask for your opinion for fixing possible
> issues, like my other bug -
> https://bugs.freedesktop.org/show_bug.cgi?id=95348

I prefer the mailing list (and it does have more people actively observing), but either is okay for this.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.